  14 Nov 2020; Manuel Friedli <manuel@gentoo.org>
  drone-runner-docker-1.6.0.ebuild:
  dev-util/drone-runner-docker: Fixes #67

*drone-runner-docker-1.6.0 (14 Nov 2020)

  14 Nov 2020; Manuel Friedli <manuel@gentoo.org>
  +drone-runner-docker-1.6.0.ebuild, files/drone-runner-docker.service:
  dev-util/drone-runner-docker: Fixes #66

*drone-runner-docker-1.5.2-r1 (08 Oct 2020)

  08 Oct 2020; Manuel Friedli <manuel@gentoo.org>
  +drone-runner-docker-1.5.2-r1.ebuild, -drone-runner-docker-1.5.2.ebuild,
  files/drone-runner-docker.service:
  dev-util/drone-runner-docker: Add fixed .service file.

*drone-runner-docker-1.5.2 (25 Sep 2020)

  25 Sep 2020; Manuel Friedli <manuel@gentoo.org>
  +drone-runner-docker-1.5.2.ebuild, +files/app.ini,
  +files/drone-runner-docker.service, +files/drone-runner-docker.sh,
  +metadata.xml:
  dev-util/drone-runner-docker: Initial add