@@ -3,5 +3,6 @@ AUX drone-runner-docker.service 481 BLAKE2B 01d977fa568cabc418f3d10ed9a7a4d658f5
 AUX drone-runner-docker.sh 612 BLAKE2B becd739d917e1c924deeb297749034639591e02f5f3f11a60241b74d8edfd927f098ca17a5ccedc5d470b8279715eab9e92ae6d21d78b6d81f059089cb89d8be SHA512 ed2c6ce725467ca038eed6a66974a76bc61931aea89eed33ee4a1752cc30000d08671c52f84be1c582f3beb2ebbddf9240f975cfdb1a543abe527465ea5ff6a0
 EBUILD drone-runner-docker-1.5.2-r1.ebuild 922 BLAKE2B 9c2fa3bc7956ad881f90c5c2503b9075fc9409e32099825c01c9da64e9d4559cf646fe597470e7527843ce308b9a24c88356e7d7ccb9dedf3f25da6dd96aff1f SHA512 8355b65eca92a74f34ed81878b3d1627ea9a80334f8c83eb17cba1527cb76adfe47c599afcf97de9a12650af679fe2109ab71c594541d174d35b01428399a0a4
 EBUILD drone-runner-docker-1.6.0.ebuild 923 BLAKE2B f2ff442cad45758aac9865ad3bf324d0cb6f98cc1994792fc93c9f47b12ecde27502db287630f4dbda9f99f0fce11d9d87ef92c9653f2dbb61efe1ad201eeabd SHA512 042672861c638566297fc4295d53a67f4c014e2f582189ae46e26fb56e913dcfa4a1ccabf6798526c2d1c2017f965bd21baf22ce5ee9304d6db5002c063320db
-MISC ChangeLog 876 BLAKE2B 3a4bdf605c651e1513fa87a204ee54dbbd6703c97019a6c68d734a2370d688729376cc70412e1086eb4d3b65d70b4002fd51cd6f25a7276d7fee70211d6a9991 SHA512 2f8f47f8348c5a0775b23c5b61f2725d6af45d1b722c4ff1e5878eeab88c96f6e1944a343fa2e5169ad5d7bd99fb70879fae848e8bdb6930b8d678342b79a216
+EBUILD drone-runner-docker-1.6.1.ebuild 923 BLAKE2B f2ff442cad45758aac9865ad3bf324d0cb6f98cc1994792fc93c9f47b12ecde27502db287630f4dbda9f99f0fce11d9d87ef92c9653f2dbb61efe1ad201eeabd SHA512 042672861c638566297fc4295d53a67f4c014e2f582189ae46e26fb56e913dcfa4a1ccabf6798526c2d1c2017f965bd21baf22ce5ee9304d6db5002c063320db
+MISC ChangeLog 1056 BLAKE2B 316af197c969155a424fb312d493db129c9cf5067a686e69ce71613b3d833901477902a852ca926be5a0bb5b02fdd4cb9228363147db30f60708f7043c7282de SHA512 4efd527f02554a41590a38b9fdc0873e5fd0144221391d187a265e17688738e1abe3e74a93017d0662a1212bf2cb585b6e1c56a87ead3a4c6e23ac1b4892838a
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
